Fix: Height of events info not covering all the text on mobile. Comté Names not wrapping.

--- a/src/components/comte.module.scss
+++ b/src/components/comte.module.scss
@@ -25,7 +25,6 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-    width: max-content;
 }
 
 .title {
