--- a/src/styles/events.module.scss
+++ b/src/styles/events.module.scss
@@ -57,7 +57,9 @@
 
     background-color: black;
     color: white;
-    height: 300px;
+    height: 100%;
+
+    min-height: 300px;
 
     transition: height 0.4s;
 }
